--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Nome do Petshop. Todos os direitos reservados.</p>
-        <p>Autor do Site: [Seu Nome Completo e RA/Matrícula]</p>
-        <p>Contato: (99) 99999-9999 | email@petshop.com.br</p>
+      <p>&copy; 2025 Nome do Petshop. Todos os direitos reservados.</p>
+        <p>Autor do Site: André Mendes Marcondes</p>
+        <p>Contato: (99) 99999-9999 | andremendesmarcondes@petshop.com.br</p>
         <nav>
              <a href="index.html">Produtos</a> | 
              <a href="servicos.html">Serviços</a> |
