--- a/contato.html
+++ b/contato.html
@@ -7,7 +7,7 @@
 <body>
 
     <header>
-        <h1>Nome do Petshop (Bichinhos Felizes)</h1>
+        <h1>Bichinhos Felizes</h1>
         <p>Tudo para o seu melhor amigo!</p>
         <nav>
             <ul>
