--- a/contato.html
+++ b/contato.html
@@ -37,7 +37,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Nome do Petshop. Todos os direitos reservados.</p>
+        <p>&copy; 2025 Bichinhos Felizes. Todos os direitos reservados.</p>
         <p>Autor do Site: André Mendes Marcondes</p>
         <p>Contato: (99) 99999-9999 | andremendesmarcondes@petshop.com.br</p>
         <nav>
